# Linux_learning

./: README.md  python_demo.py
learn0/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  hello_cpp.cpp  hello_world.txt
learn1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_cpp2.cpp  learn_cmake2  nb_cpp.cpp  nb_cpp.hpp
learn2/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  a.out  cmake_install.cmake  cpp_node  cpp_node.cpp  py_node.py
learn2/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
learn3/demo_py_pkg/: setup.cfg  setup.py
learn3/install/: local_setup.sh  setup.sh
learn3/learn3.1/demo_py_pkg_2/: package.xml  setup.cfg  setup.py
learn3/learn3.1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
learn3/learn3.1/log/: latest_build
learn3/learn3.2/demo_cpp_nodes/: CMakeLists.txt
learn3/learn3.2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
learn3/learn3.2/log/: latest_build
learn3/learn3_ws/install/: local_setup.sh  setup.sh
learn3/learn3_ws/log/: latest_build
learn3/learn3_ws/src/demo_cpp_nodes/: CMakeLists.txt
learn3/learn3_ws/src/demo_cpp_nodes/src/: motor_node.cpp
learn3/log/: latest_build
learn4/learn4_topics_ws/install/: local_setup.sh  setup.sh
learn4/learn4_topics_ws/log/: latest_build
learn4/learn4_ws/install/: local_setup.sh  setup.sh
learn4/learn4_ws/log/: latest_build
learn5/learn5_cpp_ws/install/: local_setup.sh  setup.sh
learn5/learn5_cpp_ws/log/: latest_build
(+181 files in other folders)
